--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -9,24 +9,24 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.9', '3.10', '3.11', '3.12', '3.13']
     steps:
       - uses: actions/checkout@v4
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
       - name: Display Python version for testing purposes
         run: python -c "import sys; print(sys.version)"
-      - name: Install Python dependencies
-        uses: py-actions/py-dependency-install@v4
-        with:
-          path: "requirements.txt"
+      - name: Install requirements with uv
+        run: uv pip install --system -r requirements.txt
       - name: Run unittests with pytest
-        run: python -m pytest -v
+        run: uv run pytest -v
         working-directory: .
       - name: Install nbmake
-        run: python -m pip install nbmake
+        run: uv pip install install nbmake
       - name: pytest notebooks
-        run: python -m pytest --nbmake Readme.ipynb
+        run: uv run pytest --nbmake Readme.ipynb
         working-directory: .
