--- a/.github/workflows/unittest.yml
+++ b/.github/workflows/unittest.yml
@@ -26,7 +26,7 @@ jobs:
         run: python -m pytest -v
         working-directory: .
       - name: Install nbmake
-        run: uv pip install nbmake
+        run: uv pip install --system nbmake
       - name: pytest notebooks
         run: python -m pytest --nbmake Readme.ipynb
         working-directory: .
